--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body     {
 
 /* styling our header */
 header   {
-  background: #222;
+  background: #fff;
   color: #FFF;
   padding: 20px 30px;
 }
@@ -54,7 +54,7 @@ nav ul li {
   display: inline-block;
 }
 nav ul li a    {
-  color: #FFF;
+  color: #222;
   text-decoration: none;
   display: block;
   padding: 10px 15px;
